--- a/covid_19.html
+++ b/covid_19.html
@@ -47,7 +47,7 @@ Những ngày gần đây, số ca mắc mỗi ngày của thành phố tăng nh
 
 Trong ngày 3/7, Việt Nam ghi nhận thêm 914 ca trong nước. Trong đó có 792 ca được phát hiện ở khu cách ly hoặc khu đã được phong tỏa. Đây cũng là ngày ghi nhận số ca trong nước cao nhất từ khi dịch xuất hiện cách đây một năm rưỡi.
 
-Bắc Giang vẫn là địa phương ghi nhận nhiều ca nhiễm nhất với 5.710 ca; tiếp đó là TP HCM 5.437; Bắc Ninh 1.606 ca và Bình Dương 548 ca.
+Bắc Giang vẫn là địa phương ghi nhận nhiều ca nhiễm nhất với 5.710 ca; tiếp đó là TP HCM 5.437; Bắc Ninh 1.606 ca và Bình Dương 548 ca.<br/><br/><br/><br/>
             </main>
             <footer>
                 Copyright @ 2021 Tintuc24h
