--- a/thoisu/covid_2.html
+++ b/thoisu/covid_2.html
@@ -11,9 +11,9 @@
                 
             </header>
             <nav>
-                <a href='thoisu/thoisu.html'>Thời sự</a> |
-                <a href='gocnhin/gocnhin.html'>Góc nhìn</a> |
-                <a href='thegioi/thegioi.html'>Thế giới</a>
+                <a href='../thoisu/thoisu.html'>Thời sự</a> |
+                <a href='../gocnhin/gocnhin.html'>Góc nhìn</a> |
+                <a href='../thegioi/thegioi.html'>Thế giới</a>
             </nav>
 <main>
     <h1>TP HCM thí điểm cách ly F1 tại nhà theo 'công thức 14-14</h1><br/><br/>
