--- a/covid_19.html
+++ b/covid_19.html
@@ -3,6 +3,7 @@
         <title>
             Covid 19
         </title>
+        <link href="style.css"  rel="stylesheet" media="screen,print" />  
     </head>
     <body>
         
