--- a/thoisu/covid_2.html
+++ b/thoisu/covid_2.html
@@ -3,6 +3,7 @@
         <title>
             covid_2
         </title>
+        <link href="../style.css"  rel="stylesheet" media="screen,print" />  
     </head>
     <body>
 
